--- a/readme.qmd
+++ b/readme.qmd
@@ -4,8 +4,4 @@ format: md
 editor: visual
 ---
 
-## STAT 155 Project
-
--   Project Description
-
--   Find a dataset! Deliminate the problem!
+## Rucha Deshpande - STAT 155 Project
