--- a/Project 1/readme.qmd
+++ b/Project 1/readme.qmd
@@ -4,8 +4,17 @@ format: md
 editor: visual
 ---
 
-## STAT 155 Project Description
+```{r}
+rm(list=ls())
+tuesdata <- tidytuesdayR::tt_load('2023-07-18')
+tuesdata <- tidytuesdayR::tt_load(2023, week = 29)
 
-This project aims to explore if there are any patterns when a GPT detection tool aims to distinguish AI-generated text from human-written text. I aim to predict if a text is AI or human written, and if there are any types of texts that are more likely to be missclassified.
+detectors <- tuesdata$detectors
 
-I am using the tinytuesday dataset from 7/18/23, about GPT Detectors. I chose this project because of the prevalence of AI in our current society, and I thought it could be interesting to see if there's a pattern when it comes to AI detection mechanisms failing or misreporting results.
+detectors <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2023/2023-07-18/detectors.csv')
+```
+
+```{r}
+library(tibble)
+glimpse(data)
+```
