--- a/Project_1/Data/data_dictionary.qmd
+++ b/Project_1/Data/data_dictionary.qmd
@@ -22,4 +22,4 @@ model: The name of the model that generated the essay if it was AI generated.
 
 document_id: An identifier for the supplied essay. Some essays were duplicated and supplied across multiple detectors.
 
-prompt: For essays that were written by AI, this is a descriptor for the form of prompt engineering that was passed onto the model.
+:   For essays that were written by AI, this is a descriptor for the form of prompt engineering that was passed onto the model.
